# AUTO4508

./: .gitignore  .gitmodules  CMakeLists.txt  LawnMower.py  PTZController.py  README.md  README_OAKD.md  build_and_source_camera.sh  camera_capture.py  compose.yaml  dockerfile  lab3.py  package.xml  parta.cpp  setaria.sh  setlidar.sh  setup.sh  test_oak.py
ariaNode/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ariaNode/ament_cmake_environment_hooks/: local_setup.sh
ariaNode/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
ariaNode/install/: local_setup.sh  setup.sh
ariaNode/log/: latest_build
ariaNode/src/: ariaNode.cpp
aria_doc_html/: group__ActionClasses.html  group__DeviceClasses.html  group__ImportantClasses.html  group__MTX.html  group__OptionalClasses.html  group__UtilityClasses.html  group__easy.html  index.html  modules.html
aria_doc_html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  pages_0.js  searchdata.js
config/: vision_params.yaml
install/: local_setup.sh  setup.sh
install/my_robot_vision/share/my_robot_vision/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/my_robot_vision/share/my_robot_vision/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_my_robot_vision__rosidl_generator_cExport-noconfig.cmake  export_my_robot_vision__rosidl_generator_cExport.cmake  export_my_robot_vision__rosidl_generator_cppExport.cmake  export_my_robot_vision__rosidl_generator_pyExport-noconfig.cmake  export_my_robot_vision__rosidl_generator_pyExport.cmake  export_my_robot_vision__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_my_robot_vision__rosidl_typesupport_fastrtps_cExport.cmake  export_my_robot_vision__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_my_robot_vision__rosidl_typesupport_fastrtps_cppExport.cmake  my_robot_visionConfig.cmake  my_robot_vision__rosidl_typesupport_cExport-noconfig.cmake  my_robot_vision__rosidl_typesupport_cExport.cmake  my_robot_vision__rosidl_typesupport_cppExport-noconfig.cmake  my_robot_vision__rosidl_typesupport_cppExport.cmake  my_robot_vision__rosidl_typesupport_introspection_cExport-noconfig.cmake  my_robot_vision__rosidl_typesupport_introspection_cExport.cmake  my_robot_vision__rosidl_typesupport_introspection_cppExport-noconfig.cmake  my_robot_vision__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/my_robot_vision/share/my_robot_vision/msg/: BucketInfo.idl  BucketInfo.json  BucketInfo.msg
install/my_robot_vision/share/my_robot_vision/srv/: CaptureTarget.idl  CaptureTarget.json  CaptureTarget.srv
install/vision_yolo_detector/share/vision_yolo_detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
lidarNode/: lidar_topic_node.sh  start_lidar.sh
lidarNode/lidar_test02/: CMakeLists.txt  package.xml
lidarNode/lidar_test02/src/: lidar_test02.cpp  lidar_test02_v2.cpp
lidarNode/src/: LIDAR.cpp
log/: latest_build
map_and_nav/: nav.sh  nav_sim.sh  save_map.sh
my_robot_vision/config/: vision_params.yaml
scripts/: PTZController.py  align_and_capture.py  align_capture_node.py  align_capture_service_node.py  camera_capture.py  coordinate_utils.py  detector.py
src/: README-CAMERA.md  launch_simulation.sh
src/aria_pkg/: CMakeLists.txt  package.xml
src/aria_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/aria_pkg/install/aria_pkg/share/ament_index/resource_index/package_run_dependencies/: aria_pkg
src/aria_pkg/install/aria_pkg/share/ament_index/resource_index/parent_prefix_path/: aria_pkg
src/aria_pkg/install/aria_pkg/share/aria_pkg/: launch.py  local_setup.sh  package.dsv  package.ps1  package.sh
src/aria_pkg/log/: latest_build
src/aria_pkg/src/: ariaNode.cpp  ariaNode.hpp  ariaNode_v1.cpp  drive.h  joystick.h
src/aria_pkg/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/aria_pkg/src/log/: latest_build
src/control_package/: start_control_package.sh
src/control_package/control_package/: control_node.py
src/control_pkg/: setup.py
src/control_pkg/control_pkg/: camera_node.py  control_node.py
src/display_pkg/: setup.py  start_display.sh
src/gazebo_ws/: .bashconfig  Dockerfile  compose.yaml  ros_entrypoint.sh
src/imu_package/: package.xml  setup.py  start_imu.sh
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/interfaces/: CMakeLists.txt  package.xml
src/log/: latest_build
src/my_robot_vision/: CMakeLists.txt
src/my_robot_vision/config/: vision_params.yaml
src/my_robot_vision/launch/: align_capture_service.launch
src/my_robot_vision/msg/: BucketInfo.msg
src/my_robot_vision/scripts/: align_capture_service_node.py  camera_capture.py  run_align_service.sh
src/my_robot_vision/scripts/utils/: image_utils.py
src/my_robot_vision/srv/: CaptureTarget.srv
src/object_detector/: package.xml  setup.py
src/object_detector/object_detector/: detect_node.py
src/report_pkg/: setup.cfg  setup.py
src/sim_aria_pkg/: CMakeLists.txt  package.xml
src/sim_aria_pkg/log/: latest_build
src/sim_aria_pkg/src/: sim_aria_node.cpp
src/vision_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vision_interface/launch/: detect_target.launch.py
src/vision_interface/srv/: DetectTarget.srv
src/vision_interface/vision_interface/: __init__.py  detect_target_client.py  detect_target_service.py
src/vision_oak_publisher/: package.xml  setup.cfg  setup.py
src/vision_oak_publisher/vision_oak_publisher/: oak_camera_node.py
src/vision_yolo_detector/: setup.cfg  setup.py
srv/: CaptureTarget.srv
(+457 files in other folders)
