<package format="3">
  <name>vision_interface</name>
  <version>0.0.1</version>
  <description>Vision detection interface using depthai-sdk</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
