<?xml version="1.0"?>
<package format="3">
  <name>vision_oak_publisher</name>
  <version>0.1.0</version>
  <description>ROS 2 publisher for OAK camera using DepthAI</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>depthai</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
