<?xml version="1.0"?>
<package format="3">
  <name>vision_yolo_detector</name>
  <version>0.1.0</version>
  <description>YOLOv8 Object Detection ROS2 Node</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Exec runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- Optional: other Python dependencies you may want to declare -->
  <!-- <exec_depend>numpy</exec_depend> -->
  <!-- <exec_depend>torch</exec_depend> -->
  <!-- <exec_depend>ultralytics</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
